padroniza log files <prefix>_logname.log + forward header NO 127.0.0.1 requests

--- a/fagungis/conf/nginx.conf
+++ b/fagungis/conf/nginx.conf
@@ -2,24 +2,34 @@
 ### Nginx configuration for %(nginx_server_name)s
 
 server {
-        listen 80;
-        server_name     %(nginx_server_name)s;
-        location = /favicon.ico  {
-                root %(django_static_path)s/img;
-        }
+    listen 80;
+    server_name %(nginx_server_name)s;
 
-        location / {
-                client_max_body_size %(nginx_client_max_body_size)iM;
-                proxy_pass   http://%(gunicorn_bind)s;
-        }
+    access_log %(django_user_home)s/logs/%(project)s_nginx_access.log;
+    error_log %(django_user_home)s/logs/%(project)s_nginx_error.log;
 
-        location %(django_media_url)s
-        {
-                root %(django_media_root)s/;
-        }
+    location = /favicon.ico  {
+        root %(django_static_path)s/img;
+    }
 
-        location %(django_static_url)s
-        {
-                root %(django_static_root)s/;
-        }
+    location / {
+        client_max_body_size %(nginx_client_max_body_size)iM;
+
+        proxy_set_header    X-Real-IP   $remote_addr;
+        proxy_set_header    X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header    Host $http_host;
+        proxy_redirect      off;
+
+        proxy_pass          http://%(gunicorn_bind)s;
+    }
+
+    location %(django_media_url)s
+    {
+        root %(django_media_root)s/;
+    }
+
+    location %(django_static_url)s
+    {
+        root %(django_static_root)s/;
+    }
 }
