--- a/fagungis/conf/supervisord.conf
+++ b/fagungis/conf/supervisord.conf
@@ -5,4 +5,4 @@ user=%(django_user)s
 autostart=%(supervisor_autostart)s
 autorestart=%(supervisor_autorestart)s
 redirect_stderr=%(supervisor_redirect_stderr)s
-stdout_logfile=%(supervisor_stdout_logfile)s
+stdout_logfile=%(django_user_home)s/logs/%(project)s_supervisord.log
