Add config file, update log paths, standart log file names, update testes to new paths

--- a/fagungis/conf/config_template.conf
+++ b/fagungis/conf/config_template.conf
@@ -1,7 +1,6 @@
-[project]
+[APP]
 secret_key = %(secret_key)s
 
-[email]
 default_from_email = %(default_from_email)s
 email_host = %(email_host)s
 email_host_password = %(email_host_password)s
