--- a/tasks_manager/conf/nginx.conf
+++ b/tasks_manager/conf/nginx.conf
@@ -14,6 +14,7 @@ server {
 
     location / {
         client_max_body_size %(nginx_client_max_body_size)iM;
+        proxy_read_timeout %(proxy_read_timeout)i;
 
         proxy_set_header    X-Real-IP   $remote_addr;
         proxy_set_header    X-Forwarded-For $proxy_add_x_forwarded_for;
